--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <!-- Load the page styles. -->
   <link href="css/style.css" rel="stylesheet">
 
+  <link href='https://fonts.googleapis.com/css?family=Lato:300|Lustria' rel='stylesheet' type='text/css'>
+
   <!--
   jQuery is a common JavaScript library for reading and making changes to the
   Document Object Model (DOM). The DOM is a tree that contains information
